Planificación temporal Sprint 8

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -54,6 +54,10 @@ Otro de los aspectos tratados fue sobre la herramienta de CoSpace, la necesidad 
 Durante la semana realice algunos avances en la documentación, y estuve solucionando un bug en el uso del giroscopio. El bug en cuestión se traba de que el eje de gravedad de las partículas, no coincidía con el eje de gravedad normal. El problema resulto ser que, el parámetro <<Simulation Space>> debía de estar con la opción Word. Otro problema de este bug, era que el eje Z, no tenía la interpretación deseada para nuestro ejemplo. Para esto en el script del giroscopio, se modifico para invertir el eje Z.
  
 \subsection{Sprint 8 (18/03/2020 - 25/03/2020)}
+En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a la cuarentena en la que se encontraba el país durante esos días. Explique los avances que había realizado en la documentación y algunas de las dudas que me habían surgido sobre como debería avanzar en ciertos puntos de la documentación. También explique sobre el bug que había corregido en la aplicación, aunque no puede mostrárselo ya que al ser la reunión online  no pude preparar un vídeo para enseñarlo.
+ 
+Para este sprint seguí avanzando en la documentación, me centre en especificar los requisitos y objetivos de la aplicación. También diseñe en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
+
 
 \section{Estudio de viabilidad}
 
@@ -76,6 +80,8 @@ El resto de tarifas que posee CoSpaces, su principal característica es el núme
 La tarifa que sería recomendable se trata de la primera ofertada en el plan Pro, ya que aunque se vaya a utilizar con un número de alumnos superior al ofertado, sería posible organizarse por turnos.
 
 \subsubsection{Costes Personal}
+El proyecto ha sido desarrollado por una única persona, durante un periodo de '6' meses a tiempo parcial.
+
 \subsubsection{Costes Material}
 Mergecube...
 \subsubsection{Costes Totales}
