Corregido campo de visión de la cámara
El campo de visión de la cámara estaba desajustada, haciendo que se viera menos información en pantalla.

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -57,7 +57,7 @@ Durante la semana realice algunos avances en la documentación, y estuve solucio
 En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a la cuarentena en la que se encontraba el país durante esos días. Explique los avances que había realizado en la documentación y algunas de las dudas que me habían surgido sobre como debería avanzar en ciertos puntos de la documentación. También explique sobre el bug que había corregido en la aplicación, aunque no puede mostrárselo ya que al ser la reunión online  no pude preparar un vídeo para enseñarlo.
  
 Para este sprint seguí avanzando en la documentación, me centre en especificar los requisitos y objetivos de la aplicación. También diseñe en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
-
+\subsection{Sprint 8 (25/03/2020 - 01/04/2020)}
 
 \section{Estudio de viabilidad}
 
