Planificación temporal Sprint 9

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -47,17 +47,21 @@ Como la idea del ejemplo sería seguir el crecimiento de una planta en realidad 
 Otro de los aspectos que he estado mirando, es mejorar el posicionamiento virtual del objeto 3D en el marcador. Ya que con la primera configuración que he probado, cuando se mueve la cámara (el móvil) el objeto se mueve de su posición demasiado y no queda estable.
 
 \subsection{Sprint 7 (11/03/2020 - 18/03/2020)}
-Durante la reunión de este sprint , mostré los avances que había realizado sobre el ejemplo de la aplicación. También les explique que estuve realizando varias pruebas añadiendo las funcionalidades del SDK de MergeCube en la aplicación. Consiguiendo mejorar los resultados con el uso conjunto de Vuforia + Mergecube, que anteriormente usando unicamente Vuforia.
+Durante la reunión de este sprint mostré los avances que había realizado sobre el ejemplo de la aplicación. También les expliqué que estuve realizando varias pruebas añadiendo las funcionalidades del SDK de MergeCube en la aplicación. Consiguiendo mejorar los resultados con el uso conjunto de Vuforia + Mergecube, que únicamente con Vuforia.
 
 Otro de los aspectos tratados fue sobre la herramienta de CoSpace, la necesidad de explicar las ventajas de su uso, para explicar su viabilidad económica.
 
-Durante la semana realice algunos avances en la documentación, y estuve solucionando un bug en el uso del giroscopio. El bug en cuestión se traba de que el eje de gravedad de las partículas, no coincidía con el eje de gravedad normal. El problema resulto ser que, el parámetro <<Simulation Space>> debía de estar con la opción Word. Otro problema de este bug, era que el eje Z, no tenía la interpretación deseada para nuestro ejemplo. Para esto en el script del giroscopio, se modifico para invertir el eje Z.
+Durante la semana realicé algunos avances en la documentación, y estuve solucionando un bug en el uso del giroscopio. El bug en cuestión se traba de que el eje de gravedad de las partículas, no coincidía con el eje de gravedad normal. El problema resultó ser que, el parámetro <<Simulation Space>> debía de estar con la opción Word. Otro problema de este bug, era que el eje Z, no tenía la interpretación deseada para nuestro ejemplo. Para esto en el script del giroscopio, se modificó para invertir el eje Z.
  
 \subsection{Sprint 8 (18/03/2020 - 25/03/2020)}
-En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a la cuarentena en la que se encontraba el país durante esos días. Explique los avances que había realizado en la documentación y algunas de las dudas que me habían surgido sobre como debería avanzar en ciertos puntos de la documentación. También explique sobre el bug que había corregido en la aplicación, aunque no puede mostrárselo ya que al ser la reunión online  no pude preparar un vídeo para enseñarlo.
+En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a la cuarentena en la que se encontraba el país durante esos días. Expliqué los avances que había realizado en la documentación y algunas de las dudas que me habían surgido sobre como debería avanzar en ciertos puntos de la documentación. También expliqué sobre el bug que había corregido en la aplicación, aunque no puede mostrárselo ya que al ser la reunión online  no pude preparar un vídeo para enseñarlo.
  
-Para este sprint seguí avanzando en la documentación, me centre en especificar los requisitos y objetivos de la aplicación. También diseñe en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
-\subsection{Sprint 8 (25/03/2020 - 01/04/2020)}
+Para este sprint seguí avanzando en la documentación, me centré en especificar los requisitos y objetivos de la aplicación. También diseñé en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
+\subsection{Sprint 9 (25/03/2020 - 01/04/2020)}
+Durante el sprint de esta semana me he centrado en dotar a la aplicación de un prototipo de la interfaz y de menú funcional. En la interfaz el principal punto en que me he centrado, ha sido el de realizar una barra de progreso, la cual se rellena a medida que el nivel es completado. En el menú, me he centrado entre la navegación entre los diferentes niveles del menú, y el más importante, que desde el menú se pueda inicializar el juego correctamente.
+
+
+
 
 \section{Estudio de viabilidad}
 
@@ -73,14 +77,14 @@ La tarifa básica, ofrece la creación de una clase con capacidad para 30 person
 La tarifa básica, permite la creación de un máximo de dos espacios, es decir un máximo de dos proyectos. En la creación de ejemplos, estos se encuentran limitados a unos pocos modelos 3D de CoSpace, y a un limitado número de opciones de programación por CoBlocks. En la tarifa básica no es posible realizar proyectos para el MergeCube.
 
 Con la tarifa Pro de 69,99\euro{}, el número de personas máximas para una clase, aumenta en 5, permitiendo también que haya mas de un profesor en la clase. Permite crear mas de una clase. En el apartado de espacios, la tarifa Pro, permite crear mas de dos espacios, y en estos espacios da acceso a todos los modelos 3D de CoSpace, y permite utilizar en la programación todos los bloques de CoBlocks y scripts.
-Si se desea utilizar el Meregecube, la licencia asciende hasta los 79.99\euro{}. 
+Si se desea utilizar el Meregecube, la licencia asciende hasta los 79,99\euro{}. 
 
-El resto de tarifas que posee CoSpaces, su principal característica es el número de personas simultaneas para una clase que puede tener, subiendo en la ultima tarifa hasta 400 personas adicionales.
+El resto de tarifas que posee CoSpaces, su principal característica es el número de personas simultaneas para una clase que puede tener, subiendo en la última tarifa hasta 400 personas adicionales.
 
 La tarifa que sería recomendable se trata de la primera ofertada en el plan Pro, ya que aunque se vaya a utilizar con un número de alumnos superior al ofertado, sería posible organizarse por turnos.
 
 \subsubsection{Costes Personal}
-El proyecto ha sido desarrollado por una única persona, durante un periodo de '6' meses a tiempo parcial.
+El proyecto ha sido desarrollado por una única persona, durante un periodo de seis meses a tiempo parcial.
 
 \subsubsection{Costes Material}
 Mergecube...
