Añadida plantilla ventana texto
Se ha añadido una plantilla de una ventana emergente.

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -59,7 +59,7 @@ En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a 
 Para este sprint seguí avanzando en la documentación, me centré en especificar los requisitos y objetivos de la aplicación. También diseñé en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
 \subsection{Sprint 9 (25/03/2020 - 01/04/2020)}
 Durante el sprint de esta semana me he centrado en dotar a la aplicación de un prototipo de la interfaz y de menú funcional. En la interfaz el principal punto en que me he centrado, ha sido el de realizar una barra de progreso, la cual se rellena a medida que el nivel es completado. En el menú, me he centrado entre la navegación entre los diferentes niveles del menú, y el más importante, que desde el menú se pueda inicializar el juego correctamente.
-
+También se ha investigado sobre la posibilidad de que la aplicación mande un fichero o un mensaje, a un servidor o pagina web. Esto serviría para realizar un encuesta de opinión de la aplicación sin tener que salir de ella. 
 
 
 
