--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -1,16 +1,15 @@
 \apendice{Especificación de Requisitos}
 
 \section{Introducción}
-En el siguiente apartado se especificarán los requisitos y objetivos del ejemplo que se ha desarrollado.
+En el presente anexo se detallan los objetivos generales de la aplicación desarrollada y el catálogo de requisitos funcionales y no funcionales.
 \section{Objetivos generales}
- \begin{itemize}
-	\item El objetivo principal es realizar una aplicación móvil de realidad aumentada, desarrollándola con algunas de las herramientas de realidad aumenta vistas.
-	\item Realizar la aplicación, teniendo como principal marcador el MergeCube.
-	\item Poder ser una aplicación de ámbito educativo.
-	\item Se propone simular el crecimiento de una planta, pudiendo ver las diferentes etapas del desarrollo de la planta.
-	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.  
+\begin{itemize}
+	\item Un objetivo es el de estudiar el estado del arte en este tipo de aplicaciones de realidad aumentada, realizando una aplicación para el ámbito educativo.
+	\item Utilizar MergeCube para el diseño e implementación de la aplicación.
+	\item Como ejercicio se ha diseñado el crecimiento de una planta, en el que se representaría las principales fases del crecimiento. Sería para usar en clases de biología de X curso de primaria/secundaria.
+	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.
 \end{itemize}
-\section{Catalogo de requisitos}
+\section{Catálogo de requisitos}
 \subsection{Requisitos Funcionales}
  \begin{itemize}
 	\item \textbf{RF 1:} Menú en el que configurar diferentes modos.
