Planificación temporal Sprint 10

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -60,7 +60,9 @@ Para este sprint seguí avanzando en la documentación, me centré en especifica
 \subsection{Sprint 9 (25/03/2020 - 01/04/2020)}
 Durante el sprint de esta semana me he centrado en dotar a la aplicación de un prototipo de la interfaz y de menú funcional. En la interfaz el principal punto en que me he centrado, ha sido el de realizar una barra de progreso, la cual se rellena a medida que el nivel es completado. En el menú, me he centrado entre la navegación entre los diferentes niveles del menú, y el más importante, que desde el menú se pueda inicializar el juego correctamente.
 También se ha investigado sobre la posibilidad de que la aplicación mande un fichero o un mensaje, a un servidor o pagina web. Esto serviría para realizar un encuesta de opinión de la aplicación sin tener que salir de ella. 
-
+\subsection{Sprint 10 (01/04/2020 - 15/04/2020)}
+Como objetivo durante el sprint tenía mejorar la interfaz, principalmente con la opción de poder activar y desactivar las herramientas del juego y añadir ventanas emergentes en las que se podría leer información de ayuda o complementaria para el usuario. También centrarme en mejorar algunos de los apartados en la documentación.
+Otro de los puntos era el hacer pruebas en CoSpaces, intentando realizar un ejemplo similar al que se está desarrollando en Unity y poder hacer comparaciones.
 
 
 \section{Estudio de viabilidad}
