--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -63,6 +63,9 @@ También se ha investigado sobre la posibilidad de que la aplicación mande un f
 \subsection{Sprint 10 (01/04/2020 - 15/04/2020)}
 Como objetivo durante el sprint tenía mejorar la interfaz, principalmente con la opción de poder activar y desactivar las herramientas del juego y añadir ventanas emergentes en las que se podría leer información de ayuda o complementaria para el usuario. También centrarme en mejorar algunos de los apartados en la documentación.
 Otro de los puntos era el hacer pruebas en CoSpaces, intentando realizar un ejemplo similar al que se está desarrollando en Unity y poder hacer comparaciones.
+\subsection{Sprint 11 (15/04/2020 - 22/04/2020)}
+Durante este sprint me propuse por objetivos, el implementar una nueva herramienta que simule una nueva función para el crecimiento de plantas sumado al de regar ya implementado. En concreto trataría de representar el uso de un tipo de fertilizante. Para completar esto, han surgido también los objetivos de completar las condiciones por las que se considera una fase completada y se puede iniciar la siguiente fase, ahora por ejemplo para completar una fase aparte de recibir cierta cantidad de agua, también debería de haber recibido fertilizante. Y también el objetivo de actualizar la interfaz para que puede representar la nueva funcionalidad, la idea sería que en la barra de progreso cuando se utilice el fertilizante, quede reflejado de alguna forma, para que así el usuario vea que se ha usado.
+
 
 
 \section{Estudio de viabilidad}
