--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -65,7 +65,9 @@ Como objetivo durante el sprint tenía mejorar la interfaz, principalmente con l
 Otro de los puntos era el hacer pruebas en CoSpaces, intentando realizar un ejemplo similar al que se está desarrollando en Unity y poder hacer comparaciones.
 \subsection{Sprint 11 (15/04/2020 - 22/04/2020)}
 Durante este sprint me propuse por objetivos, el implementar una nueva herramienta que simule una nueva función para el crecimiento de plantas sumado al de regar ya implementado. En concreto trataría de representar el uso de un tipo de fertilizante. Para completar esto, han surgido también los objetivos de completar las condiciones por las que se considera una fase completada y se puede iniciar la siguiente fase, ahora por ejemplo para completar una fase aparte de recibir cierta cantidad de agua, también debería de haber recibido fertilizante. Y también el objetivo de actualizar la interfaz para que puede representar la nueva funcionalidad, la idea sería que en la barra de progreso cuando se utilice el fertilizante, quede reflejado de alguna forma, para que así el usuario vea que se ha usado.
-
+\subsection{Sprint 12 (22/04/2020 -29/04/2020)}
+Para este sprint durante la reunión mostré los avances sobre la aplicación. Mientras explicaba los avances, explique también algunos pequeños bugs que me estaba encontrando.
+Los objetivos para este sprint serían estos bugs que se han encontrado, el primero se trata de un bug en la animación de la herramienta, el cual consiste que al terminar dicha animación el objeto se queda en la posición final, la herramienta debería volver a su posición de origen para poder usarla nuevamente. Otro de los bugs y objetivos es que no se distinguía correctamente si un sistema tiene el sensor del giroscopio, por lo que, en caso de no tenerlo, no se configura correctamente y las partículas que se deberían ver afectadas por el giroscopio se quedan flotando. Y el otro bug se trata de uno de adaptabilidad, pues un elemento en las pruebas del entorno de desarrollo en el ordenador se ve en su posición correcta, pero al probar la aplicación en un dispositivo móvil, ese elemento no aparece en la posición correcta en pantalla y debería de poder adaptarse a cualquier tipo de pantalla. 
 
 
 \section{Estudio de viabilidad}
