--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -62,3 +62,16 @@
 @misc{wikitude, title={Wikitude}, url={https://www.wikitude.com/products/wikitude-sdk/}, journal={Wikitude}}
 
 @misc{ZapStudio, title={Introduction}, url={https://docs.zap.works/studio/getting-started/introduction/}, journal={Studio}}
+
+@article{taketomi2017visual,
+  title={Visual SLAM algorithms: a survey from 2010 to 2016},
+  author={Taketomi, Takafumi and Uchiyama, Hideaki and Ikeda, Sei},
+  journal={IPSJ Transactions on Computer Vision and Applications},
+  volume={9},
+  number={1},
+  pages={16},
+  year={2017},
+  publisher={Springer}
+}
+
+@misc{fletcher_2010, title={10 Tech Trends for 2010}, url={http://content.time.com/time/specials/packages/completelist/0,29569,1973759,00.html}, journal={Time}, publisher={Time Inc.}, author={Fletcher, Dan}, year={2010}, month={Mar}}
