Memoria objetivos actualizado

--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -1,7 +1,24 @@
 \capitulo{2}{Objetivos del proyecto}
 
+\subsection{Objetivos generales}
 El proyecto tiene por objetivo proponer entornos de desarrollo de aplicaciones de Realidad Aumentada y Virtual basados en herramientas libres, de código abierto. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV u otros.
 
-Se espera de entre las herramientas propuestas...
+Se espera de entre las herramientas propuestas poder conocer sus ventajas y desventajas, la viabilidad de su uso en comparación con otras.
 
-Y proponer un ejemplo desarrollado con las herramientas estudiadas.
+Crear un ejemplo desarrollado con las herramientas estudiadas, en el cual se puedan apreciar las cualidades y las ventajas de estas tecnologías que pueden ofrecer, por ejemplo en campos como el de la educación.
+
+Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube(enlace) como uso .....
+
+\subsection{Objetivos Técnicos}
+\begin{itemize}
+\item Utilizar Unity para el desarrollo de un ejemplo que ponga en practica las herramientas AR.
+\item Uso de MergeCube como eje del ejemplo.
+\item Uso de una herramienta de AR compatible con Unity, o en caso de encontrar .
+\item Utilizar Visual Studio para la programación de scripts del proyecto en Unity.
+\item Hacer uso de otra herramienta de desarrollo distinta a Unity, que requiera un usuario menos experimentado, como podría ser un alumno o profesor ajenos a la informática.
+\item Utilizar git como sistema de control de versiones, concretamente con GitHub.
+\item Para la organización de las issues  se hará uso de la extensión ZenHub.
+
+	
+\end{itemize}
+
