Memoria Aspectos relevantes Actualizado

--- a/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,7 +1,17 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
-Este apartado pretende recoger los aspectos más interesantes del desarrollo del proyecto, comentados por los autores del mismo.
-Debe incluir desde la exposición del ciclo de vida utilizado, hasta los detalles de mayor relevancia de las fases de análisis, diseño e implementación.
-Se busca que no sea una mera operación de copiar y pegar diagramas y extractos del código fuente, sino que realmente se justifiquen los caminos de solución que se han tomado, especialmente aquellos que no sean triviales.
-Puede ser el lugar más adecuado para documentar los aspectos más interesantes del diseño y de la implementación, con un mayor hincapié en aspectos tales como el tipo de arquitectura elegido, los índices de las tablas de la base de datos, normalización y desnormalización, distribución en ficheros3, reglas de negocio dentro de las bases de datos (EDVHV GH GDWRV DFWLYDV), aspectos de desarrollo relacionados con el WWW...
-Este apartado, debe convertirse en el resumen de la experiencia práctica del proyecto, y por sí mismo justifica que la memoria se convierta en un documento útil, fuente de referencia para los autores, los tutores y futuros alumnos.
+\subsection{Formación}
+Para este proyecto ha sido necesario formarse mas en Unity....
+Para el desarrollo en Unity ha sido necesario revisar tutoriales respecto algunas de sus configuraciones.
+Aunque contaba con la ventaja de que el lenguaje C\# usado por los scripts de Unity ya lo conocía, lo cual ha facilitado el proceso de desarrollo en Unity en esta parte. También el hecho de contar con un buen manual de usuario, y una comunidad de usuarios notable.
+Formación en técnicas de Unity para hacer diversos elementos, o trucos...
+\subsection{Estudio herramientas}
+Uno de los principales puntos de este proyectos ha sido el estudio de diferentes herramientas de realidad aumentada. Para la selección de estas herramientas se siguieron varios pasos. Primero dos de las herramientas de las cuales ya se tenían algunos conocimientos debido a la importancia de las compañías ARCore de Google y ARkit de Aple. Para el resto de herramientas se procedió ha buscar las herramientas mas conocidas y con mayor recepción.
+\subsection{Desarrollo en Unity}
+Para desarrollar un ejemplo que aplicara las herramientas estudiadas, se tuvo en cuenta aquellos entornos con los eran compatible, ademas de a ser posible buscar un entorno gratuito. Unity se trataba del que mejor concordaba con las características en la mayoría de herramientas. Ademas de que cuenta con um amplio manual de usuario, y un gran apoyo de la comunidad.
+\subsection{Desarrollo en CoSpace}
+Durante el desarrollo en Cospace
+
+
+
+
