Planificación temporal Sprint 13

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -69,6 +69,10 @@ Durante este sprint me propuse por objetivos, el implementar una nueva herramien
 Para este sprint durante la reunión mostré los avances sobre la aplicación. Mientras explicaba los avances, explique también algunos pequeños bugs que me estaba encontrando.
 Los objetivos para este sprint serían estos bugs que se han encontrado, el primero se trata de un bug en la animación de la herramienta, el cual consiste que al terminar dicha animación el objeto se queda en la posición final, la herramienta debería volver a su posición de origen para poder usarla nuevamente. Otro de los bugs y objetivos es que no se distinguía correctamente si un sistema tiene el sensor del giroscopio, por lo que, en caso de no tenerlo, no se configura correctamente y las partículas que se deberían ver afectadas por el giroscopio se quedan flotando. Y el otro bug se trata de uno de adaptabilidad, pues un elemento en las pruebas del entorno de desarrollo en el ordenador se ve en su posición correcta, pero al probar la aplicación en un dispositivo móvil, ese elemento no aparece en la posición correcta en pantalla y debería de poder adaptarse a cualquier tipo de pantalla. 
 
+\subsection{Sprint 13 (29/04/2020 - 06/05/2020)}
+Los objetivos de este Sprint serán centrarse en la documentación. Principalmente he decidido centrarme en los apartados de la introducción de la memoria, el de Técnicas y Herramientas explicando sobre la experiencia de usar CoSpaces, y actualizar el apartado de los objetivos del proyecto.
+
+Centrados en la aplicación que se esta desarrollando, se pondrán por objetivos seguir investigando posibles soluciones al bug de adaptabilidad que surge al ejecutar la aplicación en un dispositivo móvil. También añadir una nueva condición para que cada fase tenga un tiempo limite para completarla. Para ello hay que implementar un marcador que muestre el tiempo que queda y al finalizar se muestre algún mensaje para que el usuario se percate de que se ha quedado sin tiempo.
 
 \section{Estudio de viabilidad}
 
