Planificación temporal Sprint 13

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -59,9 +59,10 @@ En este Sprint, la reunión se tuvo que realizar por videoconferencia, debido a 
 Para este sprint seguí avanzando en la documentación, me centré en especificar los requisitos y objetivos de la aplicación. También diseñé en unas imágenes un prototipo de la interfaz. En la aplicación trabajé en añadir diferentes fases del crecimiento de un planta, que cuando se completa el progreso de una fase salta a la siguiente. 
 \subsection{Sprint 9 (25/03/2020 - 01/04/2020)}
 Durante el sprint de esta semana me he centrado en dotar a la aplicación de un prototipo de la interfaz y de menú funcional. En la interfaz el principal punto en que me he centrado, ha sido el de realizar una barra de progreso, la cual se rellena a medida que el nivel es completado. En el menú, me he centrado entre la navegación entre los diferentes niveles del menú, y el más importante, que desde el menú se pueda inicializar el juego correctamente.
-También se ha investigado sobre la posibilidad de que la aplicación mande un fichero o un mensaje, a un servidor o pagina web. Esto serviría para realizar un encuesta de opinión de la aplicación sin tener que salir de ella. 
+
+También se ha investigado sobre la posibilidad de que la aplicación mande un fichero o un mensaje, a un servidor o página web. Esto serviría para realizar un encuesta de opinión de la aplicación sin tener que salir de ella. 
 \subsection{Sprint 10 (01/04/2020 - 15/04/2020)}
-Como objetivo durante el sprint tenía mejorar la interfaz, principalmente con la opción de poder activar y desactivar las herramientas del juego y añadir ventanas emergentes en las que se podría leer información de ayuda o complementaria para el usuario. También centrarme en mejorar algunos de los apartados en la documentación.
+Como objetivo durante el sprint tenía mejorar la interfaz, principalmente con la opción de poder activar y desactivar las herramientas del juego y añadir ventanas emergentes en las que se podría leer información de ayuda para el usuario. También centrarme en mejorar algunos de los apartados en la documentación.
 Otro de los puntos era el hacer pruebas en CoSpaces, intentando realizar un ejemplo similar al que se está desarrollando en Unity y poder hacer comparaciones.
 \subsection{Sprint 11 (15/04/2020 - 22/04/2020)}
 Durante este sprint me propuse por objetivos, el implementar una nueva herramienta que simule una nueva función para el crecimiento de plantas sumado al de regar ya implementado. En concreto trataría de representar el uso de un tipo de fertilizante. Para completar esto, han surgido también los objetivos de completar las condiciones por las que se considera una fase completada y se puede iniciar la siguiente fase, ahora por ejemplo para completar una fase aparte de recibir cierta cantidad de agua, también debería de haber recibido fertilizante. Y también el objetivo de actualizar la interfaz para que puede representar la nueva funcionalidad, la idea sería que en la barra de progreso cuando se utilice el fertilizante, quede reflejado de alguna forma, para que así el usuario vea que se ha usado.
@@ -74,6 +75,12 @@ Los objetivos de este Sprint serán centrarse en la documentación. Principalmen
 
 Centrados en la aplicación que se esta desarrollando, se pondrán por objetivos seguir investigando posibles soluciones al bug de adaptabilidad que surge al ejecutar la aplicación en un dispositivo móvil. También añadir una nueva condición para que cada fase tenga un tiempo limite para completarla. Para ello hay que implementar un marcador que muestre el tiempo que queda y al finalizar se muestre algún mensaje para que el usuario se percate de que se ha quedado sin tiempo.
 
+\subsection{Sprint 14 (06/05/2020 - 13/05/2020)}
+Para el sprint de esta semana me puse por objetivos el crear un menú en realidad aumentada, de forma que se pueda cambiar entre un menú normal y el de realidad aumenta, ademas de añadir imágenes que indiquen el nombre de cada parte de la planta. También la investigación para intentar corregir dos bugs, similares en los que los elementos en pantalla se posicionan incorrectamente dependiendo de la resolución de pantalla o si se ejecuta en un dispositivo móvil impidiendo que se vean de forma correcta. 
+Otro punto a investigar es reducir el peso de la aplicación, pues actualmente pesa más de 80MB, y hay algunos archivos que no están en uso, por lo que habría que clasificar cuales se pueden eliminar.
+
+Otro punto a investigar se trata de añadir alguna de las otras funciones de realidad aumentada que posee Vuforia, ver cuales de las que ofrece puede ser más apropiada para complementar el ejemplo desarrollado.
+
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
@@ -83,14 +90,14 @@ En este apartado se evaluara la viabilidad económica de las herramientas que se
 
 CoSpaces, ofrece varias tarifas aparte de la básica que es gratuita, la más barata de 69,99\euro{}  anuales y la mas cara es de 1349,99\euro{} anuales.
 
-La tarifa básica, ofrece la creación de una clase con capacidad para 30 personas (alumnos y profesores). En esta clase virtual, el profesor puede crear unicamente una tarea y asignarse al alumnado de forma individual o por grupos. El número máximo de profesores por clase en la tarifa básica es de uno.
+La tarifa básica, ofrece la creación de una clase con capacidad para 30 personas (alumnos y profesores). En esta clase virtual, el profesor puede crear únicamente una tarea y asignarse al alumnado de forma individual o por grupos. El número máximo de profesores por clase en la tarifa básica es de uno.
 
 La tarifa básica, permite la creación de un máximo de dos espacios, es decir un máximo de dos proyectos. En la creación de ejemplos, estos se encuentran limitados a unos pocos modelos 3D de CoSpace, y a un limitado número de opciones de programación por CoBlocks. En la tarifa básica no es posible realizar proyectos para el MergeCube.
 
 Con la tarifa Pro de 69,99\euro{}, el número de personas máximas para una clase, aumenta en 5, permitiendo también que haya mas de un profesor en la clase. Permite crear mas de una clase. En el apartado de espacios, la tarifa Pro, permite crear mas de dos espacios, y en estos espacios da acceso a todos los modelos 3D de CoSpace, y permite utilizar en la programación todos los bloques de CoBlocks y scripts.
 Si se desea utilizar el Meregecube, la licencia asciende hasta los 79,99\euro{}. 
 
-El resto de tarifas que posee CoSpaces, su principal característica es el número de personas simultaneas para una clase que puede tener, subiendo en la última tarifa hasta 400 personas adicionales.
+El resto de tarifas que posee CoSpaces, su principal característica es el número de personas simultáneas para una clase que puede tener, subiendo en la última tarifa hasta 400 personas adicionales.
 
 La tarifa que sería recomendable se trata de la primera ofertada en el plan Pro, ya que aunque se vaya a utilizar con un número de alumnos superior al ofertado, sería posible organizarse por turnos.
 
